# hoshi-trans

./: .gitignore  CLAUDE.md  COMMON_TEXT.md  README.md  RUNPOD.md  glossary.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: CLAUDE_CODE_PROMPT.md  CONTEXT.md  Cargo.toml  ENGINE_NOTES.md  PRD.md
docs/marketing/: itch-listing.md  kofi-page.md  reddit-localllama.md  reddit-rpgmaker.md
docs/mnt/user-data/outputs/hoshi-trans-v6/src-tauri/src/engines/bakin/: ENGINE_NOTES.md
docs/mnt/user-data/outputs/hoshi-trans-v6/src-tauri/src/engines/wolf_rpg/: ENGINE_NOTES.md
docs/superpowers/plans/: 2026-03-13-step-01-scaffold.md  2026-03-13-step-02-layout-onboarding.md  2026-03-13-step-03-database.md  2026-03-13-step-04-file-import.md  2026-03-13-step-05-rpgmaker-extractor.md  2026-03-13-step-06-translation-ui.md  2026-03-13-step-07-injection-export.md  2026-03-13-step-08-settings.md  2026-03-13-step-09-ux-polish.md  2026-03-13-step-10-wolf-rpg.md  2026-03-13-step-11-bakin.md  2026-03-13-step-12-donations.md  2026-03-13-step-13-parallel-batch.md  2026-03-14-glossary.md  2026-03-14-model-optimization.md  2026-03-22-refine-pass.md  2026-03-29-glossary-filtering.md  2026-03-29-marker-extraction.md  2026-04-05-translation-list-improvements.md  2026-04-06-translation-ui-redesign.md  2026-04-17-unified-modelfiles.md  2026-04-19-context-lines.md  2026-04-25-github-release.md  2026-04-25-quality-feedback-loop.md  2026-05-02-monetization-visibility.md  2026-05-02-ollama-cloud-modelfile-installer.md  2026-05-03-voltage-redesign.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_glossary.sql  003_unique_entries.sql  004_glossary_global.sql  005_refine_columns.sql  006_translated_at.sql  007_token_counts.sql  008_glossary_timestamps.sql  009_glossary_global_usage.sql
src-tauri/modelfiles/: hoshi-translator-27b.Modelfile  hoshi-translator-30b.Modelfile  hoshi-translator-4b.Modelfile  hoshi-translator-abliterated-4b.Modelfile  hoshi-translator.Modelfile
src-tauri/modelfiles/rev/: hoshi-translator-27b-rev.Modelfile  hoshi-translator-30b-rev.Modelfile  hoshi-translator-4b-rev.Modelfile  hoshi-translator-rev.Modelfile
src-tauri/modelfiles/trans/: hoshi-translator-14b-trans.Modelfile  hoshi-translator-27b-trans.Modelfile  hoshi-translator-30b-trans.Modelfile  hoshi-translator-32b-trans.Modelfile  hoshi-translator-4b-trans.Modelfile  hoshi-translator-claude-trans.Modelfile
src-tauri/prompts/: hoshi-prompts.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  debug_export.rs  entries.rs  extract.rs  glossary.rs  inject.rs  install.rs  mod.rs  ollama.rs  project.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/engines/: mod.rs
src-tauri/src/engines/common/: mod.rs  placeholders.rs  skip.rs  text_type.rs
src-tauri/src/engines/rpgmaker_mv_mz/: ENGINE_NOTES.md  extractor.rs  injector.rs  mod.rs  placeholders.rs  skip.rs
src-tauri/src/engines/wolf_rpg/: ENGINE_NOTES.md  extractor.rs  injector.rs  mod.rs  placeholders.rs  sidecar.rs  skip.rs
src-tauri/src/models/: glossary.rs  mod.rs  project.rs  translation.rs
src/components/: alert-test.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx
src/features/about/: AboutPage.tsx
src/features/file-export/: ExportButton.tsx  index.ts
src/features/file-import/: FileImportButton.tsx  index.ts
src/features/glossary/: GlossaryPage.tsx  GlossaryPanel.tsx  index.ts
src/features/ollama/: OllamaPage.tsx  index.ts
src/features/onboarding/: OnboardingPage.tsx
src/features/project-library/: ProjectLibrary.tsx  index.ts
src/features/settings/: SettingsPage.tsx
src/features/translation/: BatchControls.tsx  FileStatsPanel.tsx  TranslationRow.tsx  TranslationView.tsx  index.ts
src/hooks/: useOllamaStatus.ts  useProject.ts  useRefineBatch.ts  useTranslationBatch.ts
src/lib/: models.ts
src/stores/: appStore.ts
src/types/: index.ts
