[package]
name = "hoshitrans"
version = "0.1.0"
description = "RPG game translation tool — JP to EN/FR via Ollama"
authors = ["BlackKat"]
edition = "2021"

[lib]
name = "hoshitrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ────────────────────────────────────────────────────────────────
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# ── Sérialisation ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Gestion d'erreurs ─────────────────────────────────────────────────────────
anyhow = "1"
tokio = { version = "1.50.0", features = ["full"] }
ollama-rs = "0.3.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
